# stackage-dot

./: LICENSE  README.md  stackage-dot.cabal
src/: Main.hs
